fix styles on mobile screen

--- a/style.css
+++ b/style.css
@@ -6,15 +6,23 @@
 body {
   background: #232830;
 }
-nav,
+.menu ul,
 ul {
+  display: flex;
+  flex-direction: row;
+
+  list-style-type: none;
+}
+nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 1em;
 }
-nav a,
-ul {
+.open {
+  display: none;
+}
+nav a {
   text-decoration: none;
   color: #fff;
   font-family: Poppins;
@@ -102,6 +110,7 @@ span {
   display: flex;
   flex-direction: column;
   gap: 0.8em;
+  margin: 0 auto;
 }
 .article-card img {
   max-width: 100%;
@@ -137,7 +146,7 @@ span {
   background: #4d4d4d;
 }
 footer {
-  height: 8rem;
+  height: 34m;
   display: flex;
   justify-content: space-around;
   padding: 1.5em;
@@ -150,15 +159,84 @@ footer p {
   font-weight: 600;
   line-height: normal;
 }
-footer span,
-.dev {
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 0.8em;
-  font-style: normal;
-  font-weight: 600;
-  background: rgb(43, 127, 196);
-  border-radius: 3px;
+footer span {
+  background-color: rgb(56, 132, 202);
+  border-radius: 4px;
+  padding: 6px 15px;
+  color: white;
+}
+footer .dev {
+  text-decoration: none;
+  color: white;
+  background-color: rgb(56, 132, 202);
   padding: 5px 10px;
-  height: 30px;
+  border-radius: 3px;
+}
+
+@media (max-width: 600px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 3em 0;
+  }
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+  }
+  .hero-content img {
+    max-width: 100%;
+    width: 8em;
+    height: 8em;
+  }
+  .hero h1 {
+    font-size: 1.4em;
+  }
+
+  .hero p {
+    font-size: 0.8em;
+    text-align: center;
+  }
+  .menu ul {
+    flex-direction: column;
+  }
+  .article-card {
+    flex: 100%;
+  }
+  .pagination {
+    width: 90%;
+    margin: 0 auto;
+    padding: 1em;
+    font-size: 0.8em;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.8em;
+  }
+  footer p {
+    font-size: 1em;
+  }
+  footer span {
+    padding: 5px 10px;
+  }
+  footer .dev {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(56, 132, 202);
+    padding: 5px 10px;
+    border-radius: 3px;
+  }
+  nav ul {
+    width: 50%;
+  }
+  .menu {
+    display: none;
+  }
 }
